# Leader-Follower_UWB

./: .gitmodules  README.md
Leader-Follower/src/collect_data/: package.xml  setup.py
Leader-Follower/src/cpp_sensor_real/: CMakeLists.txt  package.xml
Leader-Follower/src/cpp_sensor_real/src/: sensor_real_cpp.cpp
Leader-Follower/src/mymsg_msgs/: CMakeLists.txt  package.xml
Leader-Follower/src/offboard_control/: package.xml  setup.py
Leader-Follower_Simulation/: .swp  sim_run.sh
Leader-Follower_Simulation/install/: local_setup.sh  setup.sh
Leader-Follower_Simulation/log/: latest_build
Leader-Follower_Simulation/src/move_target/: CMakeLists.txt  package.xml
Leader-Follower_Simulation/src/mymsg_msgs/: package.xml
Leader-Follower_Simulation/src/offboard_control/: package.xml  setup.py
Leader-Follower_Simulation/src/offboard_control/launch/: sim_with_drone.launch.py
Leader-Follower_Simulation/src/offboard_control/offboard_control/: offboard_control.py
Leader-Follower_Simulation/src/sensor_sim/: setup.py
Leader-Follower_Simulation/worlds/: empty.world  new_world.world
Plot code and data/: Characterization_plot.py  README.md  behind_plot.py  height_plot.py  real_data_plot.py
Plot code and data/UWB caracterization/PDOAOFF/: pdoa_taratura__dist=150_pdoaoff=7.csv  pdoa_taratura__dist=175_pdoaoff=14.csv  (+4 more)
Report/: bibliografia.bib  main.tex
Report/Sections/: Architecture.tex  Implementation details.tex  Problem formulation.tex  Simulation.tex  conclusions.tex  introduction.tex  results.tex  sensor characterization.tex
(+279 files in other folders)
