<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>offboard_control</name>
  <version>0.0.0</version>
  <description>offboard control package, with simulation launch</description>
  <maintainer email="giorgio.pellegrini@studenti.unitn.it">giorgio</maintainer>
  <license>Apache License 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>builtin_interfaces</depend>
  <depend>rclpy</depend>

  <depend>px4_msgs</depend>
  <depend>mymsg_msgs</depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
